[package]
name = "riglet"
version = "0.1.0"
edition = "2018"
license = "WTFPL"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
encoding = "0.2.33"
figfont = "0.1.0"
thiserror = "1.0.25"

[patch.crates-io]
figfont = { git = "https://github.com/shurizzle/rust-figfont" }

[features]
default = ["zip"]
zip = ["figfont/zip"]
